fix display on mobile devices

--- a/_sass/jekyll-theme-minimal.scss
+++ b/_sass/jekyll-theme-minimal.scss
@@ -212,10 +212,6 @@ footer {
   header ul {
     width:99%;
   }
-
-  header li, header ul li + li + li {
-    width:33%;
-  }
 }
 
 @media print {
